syntax = "proto3";
package quasarlabs.quasarnode.qoracle;
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "osmosis/gamm/v1beta1/balancerPool.proto";
option go_package = "github.com/quasarlabs/quasarnode/x/qoracle/types";

// Pool defines the generalized structure of a liquidity pool coming from any source chain to qoracle.
message Pool {
  string id = 1; // The identifier of this pool in the source chain
  repeated cosmos.base.v1beta1.Coin assets = 2
      [(gogoproto.moretags) = "yaml:\"token\"", (gogoproto.nullable) = false, 
      (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"]; // List of assets with their current volume in pool
  bytes tvl = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.customname) = "TVL",
    (gogoproto.nullable) = false
  ]; // Total volume locked in the pool
  bytes apy = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.customname) = "APY",
    (gogoproto.nullable) = false
  ]; // Annual percentage yield of the pool
  google.protobuf.Any raw = 5 [ (cosmos_proto.accepts_interface) = "osmosis.gamm.v1beta1.Pool" ] ; // Raw data of pool structure stored in the source chain
  google.protobuf.Timestamp updated_at = 6 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true]; // Last time this pool was updated
}